--- a/assets-2/css/carousel.css
+++ b/assets-2/css/carousel.css
@@ -45,19 +45,19 @@ body {
 /* Since positioning the image, we need to help out the caption */
 .carousel-caption {
   z-index: 10;
+  text-align: center;
 }
 
 /* Declare heights because of positioning of img element */
 .carousel .item {
   height: 500px;
+  width: 100%;
   background-color: #777;
+  text-align: center;
 }
+
 .carousel-inner > .item > img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  min-width: 100%;
-  height: 500px;
+    margin: auto;
 }
 
 /* RESPONSIVE CSS
@@ -98,6 +98,16 @@ body {
   .featurette-heading {
     margin-top: 120px;
   }
+}
+
+.featurette-image-right {
+  height: 240px;
+  float: right;
+}
+
+.featurette-image-left {
+  height: 240px;
+  float: left;
 }
 
 .vertical-center {
